--- a/git_wild.Rmd
+++ b/git_wild.Rmd
@@ -34,9 +34,7 @@ diamonds_sub <- diamonds %>%
 ## STEP 7: Uh oh, merge conflicts!
 
 ```{r break-it-1}
-### Both partners - delete this comment, then write some code here
-### to plot, summarize, calculate something simple using the diamonds
-### dataset.
+Hey check out my cool code. 
 
 
 ```
